Using URIs instead of URLs